tests/invalid/semantico_tipos_incompatibles.flow
// EXPECT: E305
workflow demo {
    var edad : int
    var pais : string
    start -> validar
    validar -> end if edad == pais
}
